authenticate styles fix z-index ios

--- a/src/theme/common.scss
+++ b/src/theme/common.scss
@@ -120,7 +120,7 @@
   border: 0;
   border-radius: 54px;
   cursor: pointer;
-  z-index: 1300;
+  z-index: 999;
   position: absolute;
   display: flex;
   align-items: center;
@@ -253,7 +253,7 @@
   position: absolute;
   bottom: 74px;
   box-shadow: 0 2px 4px 0 rgba(103, 103, 103, 0.5);
-  z-index: 1300;
+  z-index: 888;
 }
 
 .overlay-tn.inline-tn .overlay-content-tn {
